2.6.1: Change minor typo.